# microblogs

./: .gitignore  Cargo.toml  diesel.toml
migrations/2024-07-19-184601_create_users/: up.sql
migrations/2024-07-20-010628_create_posts/: up.sql
migrations/2024-07-23-214912_create_attachments/: up.sql
migrations/2024-07-25-005751_create_likes/: down.sql  up.sql
src/: attachments.rs  errors.rs  feeds.rs  lib.rs  main.rs  posts.rs  profiles.rs  users.rs
webapp/: index.html  package-lock.json  package.json
webapp/src/: app.jsx  error-page.jsx  index.scss  main.jsx
webapp/src/components/: auto-resizable-textarea.jsx  feed.jsx  image-carousel.jsx  interactions.jsx  media-carousel.jsx  menu.jsx  navbar.jsx  post-body-textarea.jsx  post-card.jsx  post.jsx  user-avatar.jsx
webapp/src/routes/: index.jsx  login.jsx  post.jsx  profile.jsx  register.jsx  root.jsx
webapp/src/utils/: auth.js  media.js
