[package]
name = "microblogs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.8.0"
argon2 = "0.5.3"
chrono = "0.4.38"
diesel = { version = "2.2.2", default-features = false, features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v7"] }
